2009-08-27  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Dmitry Glazkov.

        ScriptState now keeps explicit Handle of devtools front-end
        utility context instead of trying to retrieve it from inspected
        Frame.

        https://bugs.webkit.org/show_bug.cgi?id=28772

        * bindings/v8/ScriptController.cpp:
        (WebCore::ScriptController::ScriptController):
        * bindings/v8/ScriptController.h:
        * bindings/v8/ScriptObjectQuarantine.cpp:
        (WebCore::getQuarantinedScriptObject):
        * bindings/v8/ScriptScope.cpp:
        (WebCore::ScriptScope::ScriptScope):
        * bindings/v8/ScriptState.cpp:
        (WebCore::ScriptState::ScriptState):
        (WebCore::ScriptState::~ScriptState):
        (WebCore::scriptStateFromPage):
        * bindings/v8/ScriptState.h:
        (WebCore::ScriptState::context):
        * bindings/v8/ScriptValue.h:
        (WebCore::ScriptValue::~ScriptValue):
        * inspector/InspectorController.h:
        (WebCore::InspectorController::frontendScriptState):

2009-08-27  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        WebInspector: Console won't close.

        https://bugs.webkit.org/show_bug.cgi?id=28778

        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype._updateModifiedNodes):
        * inspector/front-end/utilities.js:
        (Node.prototype.isAncestor):

2009-08-27  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix a typo in files() causing image drags to have junk file arrays.
        https://bugs.webkit.org/show_bug.cgi?id=28755

        Test: editing/pasteboard/files-during-page-drags.html

        * platform/mac/ClipboardMac.mm:
        (WebCore::ClipboardMac::files):

2009-08-27  Jeremy Orlow  <jorlow@chromium.org>

        Not reviewed.  Build fix for Chromium.

        * bindings/v8/DOMObjectsInclude.h:
        * bindings/v8/DerivedSourcesAllInOne.cpp: